# gdtera

./: Cargo.toml  build  compile_log.txt  notes.txt
alacritty_terminal/src/: ansi.rs  clipboard.rs  event_loop.rs  lib.rs  message_bar.rs  meter.rs  selection.rs  sync.rs  util.rs  vi_mode.rs
alacritty_terminal/src/config/: colors.rs  debug.rs  font.rs  mod.rs  scrolling.rs  visual_bell.rs  window.rs
alacritty_terminal/src/grid/: mod.rs  row.rs  storage.rs  tests.rs
alacritty_terminal/src/term/: cell.rs  color.rs  mod.rs
alacritty_terminal/src/tty/: mod.rs  unix.rs
alacritty_terminal/src/tty/windows/: child.rs  conpty.rs  mod.rs  winpty.rs
alacritty_terminal/tests/: ref.rs
font/src/: lib.rs
font/src/darwin/: mod.rs
font/src/directwrite/: mod.rs
font/src/ft/: mod.rs
font/src/ft/fc/: font_set.rs  pattern.rs
godot/: .swn  .swo  .swp  Node2D.tscn  gdterm.tres  jetbrains_mono.tres  project.godot  term_drawer.gdns  termscreen.gd
godot/addons/gdterm/: gdterm.gdns  main_panel.tscn  plugin.cfg
godot/libs/: libgdterm.dylib
src/: drawer.rs  event.rs  lib.rs  pty_driver.rs  term.rs
