[package]
name = "gdterm"
version = "0.1.0"
authors = ["Emilio González <emigr2k1@gmail.com>"]
edition = "2018"

[profile.release]
lto = "off"
opt-level = 2
incremental = true
debug = true

[profile.release.package."*"]
debug = false

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = "0.8"
gdnative-bindings = "0.8"
aterm = { path = "./alacritty_terminal", package = "alacritty_terminal" }
mio-extras = "2"
euclid = "0.20.1"
raqote = { version = "0.7.14", features = ["text"] }
font-kit = "0.5"
